@@ -30,12 +30,14 @@ private:
     void InitLogFile();
     void MakerInitVars();
     void WritePropFile(const wchar_t* filename);
+    bool GetServerPath(wchar_t* path);
 
 private:
     std::wstring    m_path;         // logging path ending with backsplash.
     std::wstring    m_appname;      // application name for logging.
     bool            m_inited;       // logging file is setted or not.
     long            m_level;        // group level of current group.
+    bool            m_haserr;       // see OnWriteLog
 };
 
 #endif // _X3_LOGWRITER_LOGOBSERVER_H
