@@ -4,6 +4,8 @@ X3 C++ PluginFramework
 
     * Set modified flag only if actually changed in Cx_XmlSection::SetXXX().
     * Check NULL string in Cx_ConfigXml::GetSection().
+    
+    * LogWriter: Copy log files to server if error message has fired.
 
 2011-02-21
 
